--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- PON UN FAVICON!!! -->
     <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="shortcut icon" href="./assets/images/favicon-32x32.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CAMBIA EL TITLE!!! -->
-    <title>Vite Template</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>rock-paper-scissors-game</title>
   </head>
   <body>
-    <div class="card">
-      <h1 class="card__title">Título</h1>
-      <p class="card__text">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut quis
-        mollitia sequi, quae voluptatem, eligendi, nam repudiandae cupiditate ad
-        consequatur natus omnis ducimus pariatur excepturi in magni voluptas
-        repellat quasi?
-      </p>
-      <a class="card__button" href="">boton</a>
+    <div class="home-container">
+      <div class="game-modes">
+        <a href="./html/simple.html">
+          <div class="game-modes__item">
+            <img src="./assets/images/image-rules.svg" alt="Simple mode rules" />
+            <span class="title title--home">SIMPLE MODE</span>
+          </div>
+        </a>
+        <a href="advanced.html">
+          <div class="game-modes__item">
+            <img src="./assets/images/image-rules-bonus.svg" alt="Advanced mode rules" />
+            <span class="title title--home">ADVANCED MODE</span>
+          </div>
+        </a>
+      </div>
     </div>
     <script type="module" src="./js/index.js"></script>
   </body>
