--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
-    <link rel="shortcut icon" href="./assets/images/favicon-32x32.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./assets/images/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,13 +22,19 @@
       <div class="game-modes">
         <a href="./html/simple.html">
           <div class="game-modes__item">
-            <img src="./assets/images/image-rules.svg" alt="Simple mode rules" />
+            <img
+              src="./assets/images/image-rules.svg"
+              alt="Simple mode rules"
+            />
             <span class="title title--home">SIMPLE MODE</span>
           </div>
         </a>
         <a href="advanced.html">
           <div class="game-modes__item">
-            <img src="./assets/images/image-rules-bonus.svg" alt="Advanced mode rules" />
+            <img
+              src="./assets/images/image-rules-bonus.svg"
+              alt="Advanced mode rules"
+            />
             <span class="title title--home">ADVANCED MODE</span>
           </div>
         </a>
