--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
         <a href="./html/simple.html">
           <div class="game-modes__item">
             <img
+              class="game__img"
               src="./assets/images/image-rules.svg"
               alt="Simple mode rules"
             />
@@ -32,6 +33,7 @@
         <a href="advanced.html">
           <div class="game-modes__item">
             <img
+              class="game__img"
               src="./assets/images/image-rules-bonus.svg"
               alt="Advanced mode rules"
             />
