--- a/src/html/simple.html
+++ b/src/html/simple.html
@@ -5,31 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>simple</title>
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <div class="score">
-        <span class="score__title">YOU</span>
-        <span class="score__points" id="points-user">0</span>
-      </div>
-      <span>ROCK PAPER SCISSORS</span>
-      <div class="score">
-        <span class="score__title">PC</span>
-        <span class="score__points" id="points-pc">0</span>
+        <div class="score__container">
+          <span class="score__title">YOU</span>
+          <span class="score__points" id="points-user">0</span>
+        </div>
+        <div class="score__name-container">
+          <span class="score__name">ROCKS</span>
+          <span class="score__name">PAPER</span>
+          <span class="score__name">SCISSORS</span>
+        </div>
+        <div class="score__container">
+          <span class="score__title">PC</span>
+          <span class="score__points" id="points-pc">0</span>
+        </div>
       </div>
     </header>
     <main class="main">
       <div class="game-container" id="game-container">
-        <div class="paper" data-item="paper">
+        <div
+          class="paper game-item game-item--paper"
+          data-item="paper"
+          id="paper"
+        >
           <img class="game-img" src="../assets/images/icon-paper.svg" alt="" />
         </div>
-        <div class="scissors" data-item="scissors">
+        <div
+          class="scissors game-item game-item--scissors"
+          data-item="scissors"
+          id="scissors"
+        >
           <img
             class="game-img"
             src="../assets/images/icon-scissors.svg"
             alt=""
           />
         </div>
-        <div class="rock" data-item="rock">
+        <div class="rock game-item game-item--rock" data-item="rock" id="rock">
           <img class="game-img" src="../assets/images/icon-rock.svg" alt="" />
         </div>
       </div>
