--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <div class="home-container">
+      <h1 class="title title--main">ROCK, PAPER, SCISSORS</h1>
       <div class="game-modes">
         <a href="./html/simple.html">
           <div class="game-modes__item">
