--- a/src/html/advanced.html
+++ b/src/html/advanced.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>simple</title>
+    <title>advanced</title>
   </head>
-  <body class="body">
+  <body data-mode="advanced" class="body">
     <header class="header">
       <div class="score">
         <div class="score__container">
@@ -16,6 +16,8 @@
           <span class="score__name">ROCK</span>
           <span class="score__name">PAPER</span>
           <span class="score__name">SCISSORS</span>
+          <span class="score__name">LIZARD</span>
+          <span class="score__name">SPOCK</span>
         </div>
         <div class="score__container">
           <span class="score__title">PC</span>
@@ -24,16 +26,16 @@
       </div>
     </header>
     <main class="main">
-      <div class="game-container game-container--simple" id="game-container">
+      <div class="game-container" id="game-container">
         <div
-          class="paper paper--simple game-item game-item--paper"
+          class="paper game-item game-item--paper"
           data-item="paper"
           id="paper"
         >
           <img class="game-img" src="../assets/images/icon-paper.svg" alt="" />
         </div>
         <div
-          class="scissors scissors--simple scissors game-item game-item--scissors"
+          class="scissors game-item game-item--scissors"
           data-item="scissors"
           id="scissors"
         >
@@ -43,12 +45,22 @@
             alt=""
           />
         </div>
-        <div
-          class="rock rock--simple game-item game-item--rock"
-          data-item="rock"
-          id="rock"
-        >
+        <div class="rock game-item game-item--rock" data-item="rock" id="rock">
           <img class="game-img" src="../assets/images/icon-rock.svg" alt="" />
+        </div>
+        <div
+          class="lizard game-item game-item--lizard"
+          data-item="lizard"
+          id="lizard"
+        >
+          <img class="game-img" src="../assets/images/icon-lizard.svg" alt="" />
+        </div>
+        <div
+          class="spock game-item game-item--spock"
+          data-item="spock"
+          id="spock"
+        >
+          <img class="game-img" src="../assets/images/icon-spock.svg" alt="" />
         </div>
       </div>
       <div class="move-container hide" id="move-container">
@@ -75,7 +87,7 @@
       </div>
       <button class="rules" id="rules">Rules</button>
       <div class="rules__container">
-        <img src="../assets/images/image-rules.svg" alt="" />
+        <img src="../assets/images/image-rules-bonus.svg" alt="" />
       </div>
     </main>
     <script type="module" src="../js/index.js"></script>
