--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
             <span class="title title--home">SIMPLE MODE</span>
           </div>
         </a>
-        <a href="advanced.html">
+        <a href="./html/advanced.html">
           <div class="game-modes__item">
             <img
               class="game__img"
